--- a/Onboarding/appsettings.json
+++ b/Onboarding/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString" : "server=localhost;user=root;password=secret;database=secret;"
+  "ConnectionString" : "server=db;user=root;password=secret;database=onboarding_db;"
 }
